--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'me.numilani'
 version = '1.0-SNAPSHOT'
 
 java {
-    archivesBaseName = 'ForgeRPChat'
+    archivesBaseName = 'rpchat'
     toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
