--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -15,7 +15,7 @@ license="MIT"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
-modId="ForgeRPChat" #mandatory
+modId="forgerpchat" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
@@ -34,10 +34,10 @@ displayName="ForgeRPChat" #mandatory
 #authors="Love, Cheese and small house plants" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-
+Ranged chat plugin for Forge.
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-[[dependencies.ForgeRPChat]] #optional
+[[dependencies.forgerpchat]] #optional
    # the modid of the dependency
    modId="forge" #mandatory
    # Does this dependency have to exist - if not, ordering below must be specified
@@ -47,12 +47,12 @@ description='''
    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
    ordering="NONE"
    # Side this dependency is applied on - BOTH, CLIENT or SERVER
-   side="BOTH"
+   side="SERVER"
 # Here's another dependency
-[[dependencies.ForgeRPChat]]
+[[dependencies.forgerpchat]]
    modId="minecraft"
    mandatory=true
    # This version range declares a minimum of the current minecraft version up to but not including the next major version
    versionRange="[1.18.2,1.19)"
    ordering="NONE"
-   side="BOTH"
+   side="SERVER"
